@@ -1026,22 +1026,22 @@ Titles and Help for the System Fields
 	<epp:phrase id="Plugin/Screen/Items:list_desc">Your Deposits</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:title">Import Items</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:intro">Follow the steps below to import records into your workarea.</epp:phrase>
 
-    <epp:phrase id="Plugin/Screen/Import:action:test:title">Test</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Import:action:import:title">Test + Import</epp:phrase>
-
-    <epp:phrase id="Plugin/Screen/Import:no_file">You must specify a file to import.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:action:test:title">Test run</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:action:import:title">Test run + Import</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:nothing_to_import">You must specify something to import!</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:test_completed">Test run completed: <epc:pin name="count"/> item(s) found.</epp:phrase>
-
     <epp:phrase id="Plugin/Screen/Import:test_failed">Test run failed: <epc:pin name="count"/> item(s) found before an error caused the test run to abort. Carefully check any warning messages before proceeding.</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:import_completed">Import completed: <epc:pin name="count"/> item(s) imported.</epp:phrase>
-
     <epp:phrase id="Plugin/Screen/Import:import_failed">Import failed: <epc:pin name="count"/> item(s) imported before an error caused the import to abort.</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:import_errors">The following warnings were produced:<br/><epc:pin name="errors"/></epp:phrase>
 
+    <epp:phrase id="Plugin/Screen/Import:step1">Cut and paste import records<br/><i>or</i><br />Upload import file</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:step2">Select import format</epp:phrase>
 
     <!-- eprint action screens -->
 
